<resources>
    <string name="app_name">Venues Nearby</string>

    <string name="title_activity_settings">Settings</string>

    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="no_location_text">No current location</string>

    <string name="error_operation_failed">Operation Failed</string>

    <string name="success">Success</string>
    <string name="error">Error</string>

    <string name="launch_activity">Launch activity</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <!-- Preference Titles -->
    <string name="mode_header">Mode</string>
    <string name="venues_list_header">Venues List</string>

    <!-- Realtime Preferences -->
    <string name="realtime_title">Realtime</string>
    <string name="realtime_summary_on">Automatically update your nearby venues in realtime using your location</string>
    <string name="realtime_summary_off">Only use your location once on app startup to get nearby venues</string>

    <!-- Venues List Preferences -->
    <string name="results_limit_title">Results Limit</string>
    <string name="results_limit_summary">Number of venues results to retrieve per request</string>

    <string name="no_venues_available">No Venues Available</string>
</resources>