<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/mode_header">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="realtime"
            app:summaryOff="@string/realtime_summary_off"
            app:summaryOn="@string/realtime_summary_on"
            app:title="@string/realtime_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/venues_list_header">

        <SeekBarPreference
            android:max="10"
            app:defaultValue="5"
            app:key="results_limit"
            app:min="5"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/results_limit_summary"
            app:title="@string/results_limit_title" />
    </PreferenceCategory>

</PreferenceScreen>